--- a/Projet+2+-+Reservia+FR/site2.html
+++ b/Projet+2+-+Reservia+FR/site2.html
@@ -22,7 +22,7 @@
 		</svg>
 		
 		<form class="search-form">
-			<input type="text" placeholder="Where to? ?">
+			<input type="text" placeholder="When? ?">
 		</form>
 		
 	</section>
