--- a/siteOPC.html
+++ b/siteOPC.html
@@ -33,7 +33,7 @@
     <section class="corps">
 		<div class = "hebergement">
 			
-		<h2>Hébergement à Marseille</h2>
+		<h2>Hébergement à Nice</h2>
         
 		<div class="mosaique">
         
