Rajout des liens sur les images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reservia, vacances de rêve</title>
 </head>
 
 
@@ -18,15 +18,15 @@
     <header>
         <section> 
             <nav class="nav">
-                <div class="logo">
-                    <img src="images/logo/Reservia3x.png" alt="Trouvez votre hébergement pour des vacances de rêve"/>
+                <div class="logo"><a href="">
+                    <img src="images/logo/Reservia3x.png" alt="Trouvez votre hébergement pour des vacances de rêve"/></a>
                 </div>
                 <ul class="menu">
                     <li class="hebli"> <a href=#hebergement>Hébergement</a></li>    
                     <li class="actli"> <a href=#activites>Activités</a></li> 
                 </ul>
                 <div class="inscription">
-                     <p>S'inscrire</p>
+                     <a href=""><p>S'inscrire</p></a>
                 </div> 
             </nav>
 
@@ -44,12 +44,11 @@
                 </div>
         
                 <input type="text" class="text" placeholder="Marseille, France">
-                <span class="button-web">
-                    <button>Rechercher
-                    </button>
+                <span class="button-web"> 
+                    <button><a href="">Rechercher</a></button>
                 </span>
-                <span class="button_mobile">
-                    <i class="fas fa-search"></i>
+                <span class="button_mobile"> <a href="">
+                    <i class="fas fa-search"></i></a>
                 </span>
             </div>
         </section>       
@@ -76,7 +75,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div >
-                         <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A1.jpg"  alt=""></a>
+                         <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A1.jpg"  alt="Hôtel Marseille la Canebière"></a>
                         </div>
                     </div>
                     <div class= "listings_content">                  
@@ -95,7 +94,7 @@
              <div class= "main_content_hebergement">
                 <div class= "listings_item">
                     <div >
-                     <img class= "listings_image" src= "images\hebergements\4_small\A2.jpg" alt="">
+                        <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A2.jpg" alt="Hôtel Marseille le Port"></a>
                     </div>
                 </div>
                 <div class= "listings_content">
@@ -114,7 +113,7 @@
          <div class= "main_content_hebergement">
             <div class= "listings_item">
                 <div >
-                <img class= "listings_image" src= "images\hebergements\4_small\A3.jpg" alt="">
+                    <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A3.jpg" alt="Hôtel Marseille les mouettes"></a>
                 </div>
             </div>
             <div class= "listings_content">
@@ -134,7 +133,7 @@
         <div class= "main_content_hebergement">
             <div class= "listings_item">
                 <div >
-                <img class= "listings_image" src= "images\hebergements\4_small\A4.jpg" alt="">
+                    <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A4.jpg" alt="Hôtel Marseille la Mer"></a>
                 </div>
         </div>
         <div class= "listings_content">
@@ -153,7 +152,7 @@
      <div class= "main_content_hebergement">
         <div class= "listings_item">
             <div >
-                <img class= "listings_image" src= "images\hebergements\4_small\A5.jpg" alt="">
+                <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A5.jpg" alt="Hôtel Marseille Auberge le Panier"></a>
             </div>
         </div>
         <div class= "listings_content">
@@ -172,7 +171,7 @@
      <div class= "main_content_hebergement">
         <div class= "listings_item">
             <div >
-                <img class= "listings_image" src= "images\hebergements\4_small\A6.jpg" alt="">
+                <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A6.jpg" alt="Hôtel Marseille chez Amina"></a>
             </div>
          </div>
          <div class= "listings_content">
@@ -201,7 +200,7 @@
             <div class= "main_content_pop">
                 <div class= "listings_item_pop">
                     <div >
-                     <img class= "listings_image_pop" src= "images\hebergements\4_small\B1.jpg" alt="">
+                        <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images\hebergements\4_small\B1.jpg" alt="Hôtel Marseille le soleil du matin"></a>
                     </div>
                 </div>
                 <div class= "listings_content_pop">
@@ -220,7 +219,7 @@
 		    <div class= "main_content_pop">
                <div class= "listings_item_pop">
                     <div >
-                        <img class= "listings_image_pop" src= "images\hebergements\4_small\B2.jpg" alt="">
+                        <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images\hebergements\4_small\B2.jpg" alt="Hôtel Marseille au coeur de l'eau"></a>
                     </div>
                 </div>
                 <div class= "listings_content_pop">
@@ -239,7 +238,7 @@
                 <div class= "main_content_pop">
                     <div class= "listings_item_pop">
                         <div >
-                            <img class= "listings_image_pop" src= "images\hebergements\4_small\B3.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images\hebergements\4_small\B3.jpg" alt="Hôtel Marseille tout bleu et blanc"></a>
                         </div>
                     </div>
                 <div class= "listings_content_pop">
@@ -267,7 +266,7 @@
                 <div class= "main_content_hebergement1">
                     <div class= "listings_item1">
                         <div>
-                            <img class= "listings_image_heb" src= "images\activites\4_small\reservia_vieuxport.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_vieuxport.jpg" alt="Vieux port Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content">
@@ -277,7 +276,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div>
-                            <img class= "listings_image_heb" src= "images\activites\4_small\reservia_fort.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_fort.jpg" alt="Fort des Pomègues Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content">
@@ -287,7 +286,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div >
-                            <img class= "listings_image_heb" src= "images\activites\4_small\reservia_frioul.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_frioul.jpg" alt="Iles du Frioul Marseile"></a>
                         </div>
                     </div>
                         <div class= "listings_content">
@@ -297,7 +296,7 @@
                 <div class= "main_content_hebergement2">
                     <div class= "listings_item2">
                         <div >
-                            <img class= "listings_image_heb" src= "images\activites\4_small\reservia_calanques.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_calanques.jpg" alt="Calanques Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content">
@@ -307,7 +306,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div>
-                            <img class= "listings_image_heb" src= "images\activites\4_small\reservia_garde.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_garde.jpg" alt="Notre dame de la Garde Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content">
@@ -317,7 +316,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div >
-                            <img class= "listings_image_heb" src= "images\activites\4_small\reservia_longchamps.jpg" alt="">
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_longchamps.jpg" alt="Parc Longchamp Marseille"></a>
                         </div>
                     </div>
                     <div class= "listings_content">
