Changement police prix

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class= "listings_content">                  
                         <span class ="greyText">Auberge de la Canebière
                         </span>
-                        <h2>Nuit à partir de 25€</h2>               
+                        <p>Nuit à partir de 25€</p>               
                         <div class="stars">
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
@@ -100,7 +100,7 @@
                 <div class= "listings_content">
                     <span class ="greyText">Hôtel du Port
                     </span>
-                    <h2>Nuit à partir de 52€</h2>
+                    <p>Nuit à partir de 52€</p>
                     <div class="stars">
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
@@ -119,7 +119,7 @@
             <div class= "listings_content">
                 <span class ="greyText">Hôtel des mouettes
                 </span>
-                <h2>Nuit à partir de 76€</h2>
+                <p>Nuit à partir de 76€</p>
                 <div class="stars">
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
@@ -139,7 +139,7 @@
         <div class= "listings_content">
             <span class ="greyText">Hôtel de la mer
             </span>
-            <h2>Nuit à partir de 46€</h2>
+            <p>Nuit à partir de 46€</p>
                 <div class="stars">
                     <i class="far fa-star"></i>
                     <i class="far fa-star"></i>
@@ -158,7 +158,7 @@
         <div class= "listings_content">
             <span class ="greyText">Auberge le Panier
             </span>
-            <h2>Nuit à partir de 23€</h2>
+            <p>Nuit à partir de 23€</p>
             <div class="stars">
                 <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
@@ -177,7 +177,7 @@
          <div class= "listings_content">
             <span class ="greyText">Hôtel chez Amina
             </span>
-            <h2>Nuit à partir de 96€</h2>
+            <p>Nuit à partir de 96€</p>
                 <div class="stars">
                     <i class="far fa-star"></i>
                     <i class="far fa-star"></i>
@@ -206,7 +206,7 @@
                 <div class= "listings_content_pop">
                     <span class ="greyText">Hôtel le soleil du matin
                     </span>
-                    <h2>Nuit à partir de 128€</h2>
+                    <p>Nuit à partir de 128€</p>
                         <div class="stars">
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
@@ -225,7 +225,7 @@
                 <div class= "listings_content_pop">
                     <span class ="greyText">Au coeur de l'eau chambres d'hôtes
                     </span>
-                    <h2>Nuit à partir de 71€</h2>
+                    <p>Nuit à partir de 71€</p>
                         <div class="stars">
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
@@ -244,9 +244,9 @@
                 <div class= "listings_content_pop">
                     <span class ="greyText">Hôtel tout bleu et Blanc
                     </span>
-                    <h2>Nuit à partir de 68€</h2>
+                    <p>Nuit à partir de 68€</p>
                         <div class="stars">
-                            <i class="far fa-star"></i>
+                            <i class="fas fa-star"></i>
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
@@ -269,8 +269,8 @@
                             <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_vieuxport.jpg" alt="Vieux port Marseille"></a>
                         </div>
                     </div>
-                        <div class= "listings_content">
-                            <h2>Vieux-Port</h2>
+                        <div class= "listings_content_act">
+                            <p>Vieux-Port</p>
                         </div>
                 </div>
                 <div class= "main_content_hebergement">
@@ -279,8 +279,8 @@
                             <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_fort.jpg" alt="Fort des Pomègues Marseille"></a>
                         </div>
                     </div>
-                        <div class= "listings_content">
-                            <h2>Fort des Pomègues</h2>
+                        <div class= "listings_content_act">
+                            <p>Fort des Pomègues</p>
                         </div>
                 </div>
                 <div class= "main_content_hebergement">
@@ -289,8 +289,8 @@
                             <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_frioul.jpg" alt="Iles du Frioul Marseile"></a>
                         </div>
                     </div>
-                        <div class= "listings_content">
-                            <h2>Iles du Frioul</h2>
+                        <div class= "listings_content_act">
+                            <p>Iles du Frioul</p>
                         </div>
                 </div>
                 <div class= "main_content_hebergement2">
@@ -299,8 +299,8 @@
                             <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_calanques.jpg" alt="Calanques Marseille"></a>
                         </div>
                     </div>
-                        <div class= "listings_content">
-                            <h2>Parc National des Calanques</h2>
+                        <div class= "listings_content_act">
+                            <p>Parc National des Calanques</p>
                         </div>
                 </div>
                 <div class= "main_content_hebergement">
@@ -309,8 +309,8 @@
                             <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_garde.jpg" alt="Notre dame de la Garde Marseille"></a>
                         </div>
                     </div>
-                        <div class= "listings_content">
-                            <h2>Notre-Dame-de-la-Garde</h2>
+                        <div class= "listings_content_act">
+                            <p>Notre-Dame-de-la-Garde</p>
                         </div>
                 </div>
                 <div class= "main_content_hebergement">
@@ -319,8 +319,8 @@
                             <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_longchamps.jpg" alt="Parc Longchamp Marseille"></a>
                         </div>
                     </div>
-                    <div class= "listings_content">
-                        <h2>Parc Longchamp</h2>
+                    <div class= "listings_content_act">
+                        <p>Parc Longchamp</p>
                     </div>
                 </div>
              </div>
