--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>        
 
         <section> 
-            <div class= info><i class="fas fa-info-circle"></i> <p>Plus de logements sont disponibles dans votre ville</p></div>   
+            <div class= info><i class="fas fa-info-circle"></i> <p>Plus de 500 logements sont disponibles dans votre ville</p></div>   
         </section>   
     </header>
     
@@ -187,7 +187,7 @@
                 </div>
              </div>
         </div>              
-	        <p>Afficher plus</p>
+	        <p class=afficher>Afficher plus</p>
      </div>
      </div>
 	  
