liens dans footer

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         
                 <input type="text" class="text" placeholder="Marseille, France">
                 <div class="button-web"> 
-                    <button><a href="">Rechercher</a></button>
+                    <button>Rechercher</button>
                 </div>
-                <div class="button_mobile"> <a href="">
-                    <i class="fas fa-search"></i></a>
+                <div class="button_mobile"> 
+                    <i class="fas fa-search"></i>
                 </div>
             </div>
         </section>       
@@ -78,7 +78,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div >
-                         <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A1.jpg"  alt="Hôtel Marseille la Canebière"></a>
+                         <a href="https://www.rien.fr/"><img class= "listings_image" src= "images/hebergements/4_small/A1.jpg"  alt="Hôtel Marseille la Canebière"></a>
                         </div>
                     </div>
                     <div class= "listings_content">                  
@@ -97,7 +97,7 @@
              <div class= "main_content_hebergement">
                 <div class= "listings_item">
                     <div >
-                        <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A2.jpg" alt="Hôtel Marseille le Port"></a>
+                        <a href="https://www.rien.fr/"><img class= "listings_image" src= "images/hebergements/4_small/A2.jpg" alt="Hôtel Marseille le Port"></a>
                     </div>
                 </div>
                 <div class= "listings_content">
@@ -116,7 +116,7 @@
          <div class= "main_content_hebergement">
             <div class= "listings_item">
                 <div >
-                    <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A3.jpg" alt="Hôtel Marseille les mouettes"></a>
+                    <a href="https://www.rien.fr/"><img class= "listings_image" src= "images/hebergements/4_small/A3.jpg" alt="Hôtel Marseille les mouettes"></a>
                 </div>
             </div>
             <div class= "listings_content">
@@ -136,7 +136,7 @@
         <div class= "main_content_hebergement">
             <div class= "listings_item">
                 <div >
-                    <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A4.jpg" alt="Hôtel Marseille la Mer"></a>
+                    <a href="https://www.rien.fr/"><img class= "listings_image" src= "images/hebergements/4_small/A4.jpg" alt="Hôtel Marseille la Mer"></a>
                 </div>
         </div>
         <div class= "listings_content">
@@ -155,7 +155,7 @@
      <div class= "main_content_hebergement">
         <div class= "listings_item">
             <div >
-                <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A5.jpg" alt="Hôtel Marseille Auberge le Panier"></a>
+                <a href="https://www.rien.fr/"><img class= "listings_image" src= "images/hebergements/4_small/A5.jpg" alt="Hôtel Marseille Auberge le Panier"></a>
             </div>
         </div>
         <div class= "listings_content">
@@ -174,7 +174,7 @@
      <div class= "main_content_hebergement">
         <div class= "listings_item">
             <div >
-                <a href="https://www.rien.fr/"><img class= "listings_image" src= "images\hebergements\4_small\A6.jpg" alt="Hôtel Marseille chez Amina"></a>
+                <a href="https://www.rien.fr/"><img class= "listings_image" src= "images/hebergements/4_small/A6.jpg" alt="Hôtel Marseille chez Amina"></a>
             </div>
          </div>
          <div class= "listings_content">
@@ -203,7 +203,7 @@
             <div class= "main_content_pop">
                 <div class= "listings_item_pop">
                     <div >
-                        <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images\hebergements\4_small\B1.jpg" alt="Hôtel Marseille le soleil du matin"></a>
+                        <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images/hebergements/4_small/B1.jpg" alt="Hôtel Marseille le soleil du matin"></a>
                     </div>
                 </div>
                 <div class= "listings_content_pop">
@@ -222,7 +222,7 @@
 		    <div class= "main_content_pop">
                <div class= "listings_item_pop">
                     <div >
-                        <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images\hebergements\4_small\B2.jpg" alt="Hôtel Marseille au coeur de l'eau"></a>
+                        <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images/hebergements/4_small/B2.jpg" alt="Hôtel Marseille au coeur de l'eau"></a>
                     </div>
                 </div>
                 <div class= "listings_content_pop">
@@ -241,7 +241,7 @@
                 <div class= "main_content_pop">
                     <div class= "listings_item_pop">
                         <div >
-                            <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images\hebergements\4_small\B3.jpg" alt="Hôtel Marseille tout bleu et blanc"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_pop" src= "images/hebergements/4_small/B3.jpg" alt="Hôtel Marseille tout bleu et blanc"></a>
                         </div>
                     </div>
                 <div class= "listings_content_pop">
@@ -269,7 +269,7 @@
                 <div class= "main_content_hebergement1">
                     <div class= "listings_item1">
                         <div>
-                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_vieuxport.jpg" alt="Vieux port Marseille"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images/activites/4_small/reservia_vieuxport.jpg" alt="Vieux port Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content_act">
@@ -279,7 +279,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div>
-                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_fort.jpg" alt="Fort des Pomègues Marseille"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images/activites/4_small/reservia_fort.jpg" alt="Fort des Pomègues Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content_act">
@@ -289,7 +289,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div >
-                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_frioul.jpg" alt="Iles du Frioul Marseile"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images/activites/4_small/reservia_frioul.jpg" alt="Iles du Frioul Marseile"></a>
                         </div>
                     </div>
                         <div class= "listings_content_act">
@@ -299,7 +299,7 @@
                 <div class= "main_content_hebergement2">
                     <div class= "listings_item2">
                         <div >
-                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_calanques.jpg" alt="Calanques Marseille"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images/activites/4_small/reservia_calanques.jpg" alt="Calanques Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content_act">
@@ -309,7 +309,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div>
-                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_garde.jpg" alt="Notre dame de la Garde Marseille"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images/activites/4_small/reservia_garde.jpg" alt="Notre dame de la Garde Marseille"></a>
                         </div>
                     </div>
                         <div class= "listings_content_act">
@@ -319,7 +319,7 @@
                 <div class= "main_content_hebergement">
                     <div class= "listings_item">
                         <div >
-                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images\activites\4_small\reservia_longchamps.jpg" alt="Parc Longchamp Marseille"></a>
+                            <a href="https://www.rien.fr/"><img class= "listings_image_heb" src= "images/activites/4_small/reservia_longchamps.jpg" alt="Parc Longchamp Marseille"></a>
                         </div>
                     </div>
                     <div class= "listings_content_act">
@@ -337,23 +337,23 @@
 			<div class="list">
                 <h3>A propos</h3>
                 <ul>
-                    <li>Fonctionnement du site</li>
-                    <li>Conditions générales de vente</li>
-                    <li>Données et confidentialité</li>	
+                    <li><a href=#>Fonctionnement du site</a></li>
+                    <li><a href=#>Conditions générales de vente</a></li>
+                    <li><a href=#>Données et confidentialité</a></li>	
 				</ul>
              </div>
             <div class=list>
                 <h3>Nos hébergements</h3>
                 <ul>
-					<li>Charte qualité</li>
-					<li>soumettre votre hôtel</li>
+					<li><a href=#>Charte qualité</a></li>
+					<li><a href=#>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div class=list>
                 <h3>Assistance</h3>
                     <ul>
-					<li>Centre d'aide</li>
-					<li>Nous contacter</li>
+					<li><a href=#>Centre d'aide</a></li>
+					<li><a href=#>Nous contacter</a></li>
 				</ul>
 			</div>
 		</div>
