--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             </div>
         </div>        
 
-        <section> 
+        <div> 
             <div class= info><i class="fas fa-info-circle"></i> <p>Plus de 500 logements sont disponibles dans votre ville</p></div>   
-        </section>   
+        </div>   
     </header>
     
     <section class="corps">
